--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       MYSQL_PASSWORD: app_password
       TZ: Asia/Shanghai
     ports:
-      - "3406:3406"
+      - "3406:3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./mysql/conf:/etc/mysql/conf.d
@@ -24,10 +24,29 @@ services:
     container_name: redis
     restart: always
     ports:
-      - "6479:6479"
+      - "6479:6379"
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes --requirepass redis123456
+    networks:
+      - app-network
+
+  # Go RFID 服务（使用编译好的二进制文件）
+  rfid-server:
+    build:
+      context: ./rfid-server
+      dockerfile: Dockerfile
+    container_name: rfid-server
+    restart: always
+    ports:
+      - "18898:18898"
+    environment:
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+      REDIS_PASSWORD: redis123456
+      TZ: Asia/Shanghai
+    depends_on:
+      - redis
     networks:
       - app-network
 
@@ -37,6 +56,8 @@ services:
       dockerfile: Dockerfile
     container_name: springboot-app
     restart: always
+    ports:
+      - "8080:8080"
 #    network_mode: "host"  # 使用宿主机网络
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3406/springboot_db?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
@@ -48,7 +69,25 @@ services:
       TZ: Asia/Shanghai
       SPRING_APPLICATION_NAME: TEST-ENV-VAR  # 添加测试环境变量
       SPRING_CONFIG_LOCATION: file:/config/application.yml
-    command: ["java", "-jar", "/app/app.jar","-Djava.library.path='lib'"]
+#    command:
+#      - java
+#      - -Xms512m
+#      - -Xmx1024m
+#      - -XX:+UseG1GC
+#      - -XX:MaxGCPauseMillis=200
+#      - -Djava.library.path=/app/lib
+#      - -jar
+#      - /app/app.jar
+#      - --spring.config.location=file:/config/application.yml
+    command: >
+      java 
+      -Xms512m 
+      -Xmx1024m 
+      -XX:+UseG1GC 
+      -XX:MaxGCPauseMillis=200
+      -Djava.library.path=/app/lib
+      -jar /app/app.jar
+      --spring.config.location=file:/config/application.yml
     # command: ["java", "-jar", "/app/app.jar", "--spring.config.location=file:/config/application.yml","-Djava.library.path='lib'"]
     depends_on:
       - mysql
@@ -56,6 +95,7 @@ services:
     volumes:
       - ./config/application.yml:/config/application.yml
       - ./logs:/app/logs
+      - ./target/lib-linux:/app/lib
     networks:
       - app-network
 
