--- a/config/application.yml
+++ b/config/application.yml
@@ -6,9 +6,9 @@ spring:
 
     # MySQL 配置
     datasource:
-      url: jdbc:mysql://mysql:3306/rfid?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf8&allowPublicKeyRetrieval=true
+      url: jdbc:mysql://mysql:3406/rfid?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf8&allowPublicKeyRetrieval=true
       username: root
-      password: EtreS_0128#
+      password: root123456
       driver-class-name: com.mysql.cj.jdbc.Driver
       type: com.alibaba.druid.pool.DruidDataSource
       druid:
@@ -65,6 +65,7 @@ mqtt:
     receive: /dev/${device.edgeId}/service/command
     personin: /dev/${device.hikid-in}/service/data
     personout: /dev/${device.hikid-out}/service/data
+    rfid: /dev/${device.rfid}/service/data
 wms:
   num: 1 # 仓库编号,需要和南瑞确定(需按实际场景配置)
   channelName:
