--- a/docker-compose - 副本.yml
+++ b/docker-compose - 副本.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root123456
-      MYSQL_DATABASE: springboot_db
+      MYSQL_DATABASE: rfid
       MYSQL_USER: app_user
       MYSQL_PASSWORD: app_password
       TZ: Asia/Shanghai
@@ -40,7 +40,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3406/springboot_db?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3406/rfid?useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
       SPRING_DATASOURCE_USERNAME: app_user
       SPRING_DATASOURCE_PASSWORD: app_password
       SPRING_REDIS_HOST: redis
